// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer - EmailSerializer should inline code properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <code
    style="background: rgb(244, 245, 247);color: rgb(23, 43, 77);border-radius: 3px;padding: 2px 4px;font-size: 12px;line-height: 24px;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
  >
    const foo = bar();
  </code>
</div>
`;

exports[`Renderer - EmailSerializer should inline text properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <p
    style="white-space: pre-wrap;word-wrap: break-word;"
  >
    foo
  </p>
</div>
`;

exports[`Renderer - EmailSerializer should render codeblock correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <pre
    style="background: rgb(244, 245, 247);border-radius: 3px;padding: 8px 16px;margin: 0px;"
  >
    <code
      style="color: rgb(23, 43, 77);display: block;font-size: 12px;line-height: 20px;white-space: pre;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
    >
      // Create a map.
final IntIntOpenHashMap map = new IntIntOpenHashMap();
map.put(1, 2);
map.put(2, 5);
map.put(3, 10);
int count = map.forEach(new IntIntProcedure()
{
   int count;
   public void apply(int key, int value)
   {
       if (value &gt;= 5) count++;
   }
}).count;
System.out.println("There are " + count + " values &gt;= 5");
    </code>
  </pre>
</div>
`;
